--- a/zed_to_file/CMakeLists.txt
+++ b/zed_to_file/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(poses_to_file)
+project(zed_to_file)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,6 +8,8 @@ project(poses_to_file)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  geometry_msgs
+  nav_msgs
   rospy
 )
 
@@ -68,7 +70,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   geometry_msgs#   nav_msgs
 # )
 
 ################################################
@@ -102,8 +104,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES poses_to_file
-#  CATKIN_DEPENDS rospy
+#  LIBRARIES zed_to_file
+#  CATKIN_DEPENDS geometry_msgs nav_msgs rospy
 #  DEPENDS system_lib
 )
 
@@ -120,7 +122,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/poses_to_file.cpp
+#   src/${PROJECT_NAME}/zed_to_file.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -131,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/poses_to_file_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/zed_to_file_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -195,7 +197,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_poses_to_file.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_zed_to_file.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
