--- a/homecomming/CMakeLists.txt
+++ b/homecomming/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(zed_to_file)
+project(homecomming)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -9,8 +9,11 @@ project(zed_to_file)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
+  message_generation
+  sensor_msgs
   nav_msgs
   rospy
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -54,11 +57,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+   FILES
+   SetLocalPosRef.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -70,7 +72,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs#   nav_msgs
+#   geometry_msgs#   nav_msgs#   std_msgs
 # )
 
 ################################################
@@ -103,10 +105,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES zed_to_file
-#  CATKIN_DEPENDS geometry_msgs nav_msgs rospy
-#  DEPENDS system_lib
+# INCLUDE_DIRS include
+# LIBRARIES homecomming
+# CATKIN_DEPENDS geometry_msgs nav_msgs rospy std_msgs
+# DEPENDS system_lib
 )
 
 ###########
@@ -122,7 +124,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/zed_to_file.cpp
+#   src/${PROJECT_NAME}/homecomming.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -133,7 +135,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/zed_to_file_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/homecomming_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -197,7 +199,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_zed_to_file.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_homecomming.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
